--- a/index.html
+++ b/index.html
@@ -360,39 +360,39 @@
 
                         <div class="education layout-spacing ">
                             <div class="widget-content widget-content-area">
-                                <h3 class="">Education</h3>
+                                <h3 class="">Educación</h3>
                                 <div class="timeline-alter">
                                     <div class="item-timeline">
                                         <div class="t-meta-date">
-                                            <p class="">04 Mar 2009</p>
+                                            <p class="">08 de Dic 2023</p>
                                         </div>
                                         <div class="t-dot">
                                         </div>
                                         <div class="t-text">
-                                            <p>Royal Collage of Art</p>
-                                            <p>Designer Illustrator</p>
+                                            <p>Centro de Educación Laboral</p>
+                                            <p>Bachiller Acádemico</p>
                                         </div>
                                     </div>
                                     <div class="item-timeline">
                                         <div class="t-meta-date">
-                                            <p class="">25 Apr 2014</p>
+                                            <p class="">30 de Oct 2017</p>
                                         </div>
                                         <div class="t-dot">
                                         </div>
                                         <div class="t-text">
-                                            <p>Massachusetts Institute of Technology (MIT)</p>
-                                            <p>Designer Illustrator</p>
+                                            <p>Sistema Nacional de Aprendizaje(SENA)</p>
+                                            <p>Tecnólogo en Mecatrónica</p>
                                         </div>
                                     </div>
                                     <div class="item-timeline">
                                         <div class="t-meta-date">
-                                            <p class="">04 Apr 2018</p>
+                                            <p class="">Agosto de 2023</p>
                                         </div>
                                         <div class="t-dot">
                                         </div>
                                         <div class="t-text">
-                                            <p>School of Art Institute of Chicago (SAIC)</p>
-                                            <p>Designer Illustrator</p>
+                                            <p>Universidad Distrital Francisco José de Caldas</p>
+                                            <p>Tecnología en Electrónica Industrial</p>
                                         </div>
                                     </div>
                                 </div>
@@ -409,37 +409,37 @@
                                 
                                     <div class="item-timeline">
                                         <div class="t-meta-date">
-                                            <p class="">04 Mar 2009</p>
+                                            <p class="">2 de Feb 2018</p>
                                         </div>
                                         <div class="t-dot">
                                         </div>
                                         <div class="t-text">
-                                            <p>Netfilx Inc.</p>
-                                            <p>Designer Illustrator</p>
+                                            <p>Stanton</p>
+                                            <p>Electricista</p>
                                         </div>
                                     </div>
 
                                     <div class="item-timeline">
                                         <div class="t-meta-date">
-                                            <p class="">25 Apr 2014</p>
+                                            <p class="">25 de Oct 2022</p>
                                         </div>
                                         <div class="t-dot">
                                         </div>
                                         <div class="t-text">
-                                            <p>Google Inc.</p>
-                                            <p>Designer Illustrator</p>
+                                            <p>Ingenico</p>
+                                            <p>Técnico reparador</p>
                                         </div>
                                     </div>
 
                                     <div class="item-timeline">
                                         <div class="t-meta-date">
-                                            <p class="">04 Apr 2018</p>
+                                            <p class="">23 de Jun 2023</p>
                                         </div>
                                         <div class="t-dot">
                                         </div>
                                         <div class="t-text">
-                                            <p>Design Reset Inc.</p>
-                                            <p>Designer Illustrator</p>
+                                            <p>Colpesaje</p>
+                                            <p>Asesor de Innovación y Desarrollo</p>
                                         </div>
                                     </div>
 
@@ -454,18 +454,18 @@
 
                         <div class="skills layout-spacing ">
                             <div class="widget-content widget-content-area">
-                                <h3 class="">Skills</h3>
+                                <h3 class="">Habilidades</h3>
                                 <div class="progress br-30">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class="progress-title"><span>PHP</span> <span>25%</span> </div></div>
+                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class=""><span ><font color="white"><h7>PHP</h7></font> </span> <span></span> </div></div>
                                 </div>
                                 <div class="progress br-30">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class="progress-title"><span>Wordpress</span> <span>50%</span> </div></div>
+                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class=""><span><font color="white"><h7>JAVA</h7></font></span> <span</span> </div></div>
                                 </div>
                                 <div class="progress br-30">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class="progress-title"><span>Javascript</span> <span>70%</span> </div></div>
+                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class=""><span><font color="white"><h7>JAVASCRIPT</h7></font></span> <span></span> </div></div>
                                 </div>
                                 <div class="progress br-30">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class="progress-title"><span>jQuery</span> <span>60%</span> </div></div>
+                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class=""><span><font color="white"><h7>PYTHON</h7></font></span> <span></span> </div></div>
                                 </div>
 
                             </div>
@@ -474,9 +474,9 @@
                         <div class="bio layout-spacing ">
                             <div class="widget-content widget-content-area">
                                 <h3 class="">Bio</h3>
-                                <p>I'm Web Developer from California. I code and design websites worldwide. Mauris varius tellus vitae tristique sagittis. Sed aliquet, est nec auctor aliquet, orci ex vestibulum ex, non pharetra lacus erat ac nulla.</p>
+                                <p>Soy Desarrollador Web de Bogotá. Comencé en el mundo de la programación debido a mi interes por las infraestructuras IOT y su relación con la Industria 4.0 . Soy Tecnólogo en Electrónica me gusta el área de la investigación y el desarrollo, tanto de Hardware como de Software.</p>
 
-                                <p>Sed vulputate, ligula eget mollis auctor, lectus elit feugiat urna, eget euismod turpis lectus sed ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc ut velit finibus, scelerisque sapien vitae, pharetra est. Nunc accumsan ligula vehicula scelerisque vulputate.</p>
+                               
 
                                 <div class="bio-skill-box">
 
