--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         
         <!--  BEGIN CUSTOM STYLE FILE  -->
         <link href="assets/css/users/user-profile.css" rel="stylesheet" type="text/css" />
+         <link href="assets/css/elements/avatar.css" rel="stylesheet" type="text/css" />
     </head>
 
 
@@ -157,7 +158,9 @@
                                     <a href="#" class="mt-2 edit-profile"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-3"><path d=""></path><path d=""></path></svg></a>
                                 </div>
                                 <div class="text-center user-info">
-                                    <img src="assets/img/90x90.jpg" alt="avatar">
+                                   <div class="avatar avatar-xl">
+                                        <span class="avatar-title rounded-circle">DO</span>
+                                    </div>
                                     <p class="">Diego Olave</p>
                                 </div>
                                 <div class="user-info-list">
@@ -282,7 +285,7 @@
                                         </div>
                                         <div class="t-text">
                                             <p>Colpesaje</p>
-                                            <p>Asesor de Innovación y Desarrollo</p>
+                                            <p>Asistente de Innovación y Desarrollo</p>
                                         </div>
                                     </div>
 
