--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
             <a href="javascript:void(0);" class="sidebarCollapse" data-placement="bottom"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></a>
 
-            <div class="nav-logo align-self-center">
-                <a class="navbar-brand" href="index.html"><img alt="logo" src="assets/img/BP1.jpg"> <span class="navbar-brand-name"><b style="font-size: 25px;color:#FFFFFF">BITALPROG</b></span></a>
+            <div class="avatar avatar-sm align-self-center">
+                <a class="navbar-brand " href="index.html"><img alt="avatar-sm " src="assets/img/BP1.jpg"> <span class="navbar-brand-name rounded-circle"><b style="font-size: 25px;color:#FFFFFF">BITALPROG</b></span></a>
             </div>
 
             <ul class="navbar-item flex-row mr-auto">
@@ -111,7 +111,7 @@
 
         <ul class="list-unstyled menu-categories " id="topAccordion">
 
-            <li class="menu single-menu mx-auto ">
+            <li class="menu single-menu mx-auto">
                 
                     <a href="#dashboard" data-toggle="collapse" aria-expanded="true" class="dropdown-toggle autodroprown">
                         <div>
@@ -382,6 +382,19 @@
                                     </div>
 
                                 </div>
+
+                            </div>                                
+                        </div>
+                        <div class="bio layout-spacing ">
+                            <div class="widget-content widget-content-area">
+                                <h3 class="">Videos Realizados</h3>
+                                <p>En el proyecto de grado realicé una plataforma <b>iot</b> junto a una incubadora que tenía como Característica principal un <b>PID</b>, el siguiente video explica a detalle el <b>proyecto</b> realizado:</p>
+
+                                <div class="mx-auto text-center">
+                                    <iframe width="800" height="350" src="https://www.youtube.com/embed/DzidLA0cg0k?si=fFx91--ih0ABCvto" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                </div>
+
+                                
 
                             </div>                                
                         </div>
