--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
             <a href="javascript:void(0);" class="sidebarCollapse" data-placement="bottom"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></a>
 
-            <div class="avatar avatar-sm align-self-center">
-                <a class="navbar-brand " href="index.html"><img alt="avatar-sm " src="assets/img/BP1.jpg"> <span class="navbar-brand-name rounded-circle"><b style="font-size: 25px;color:#FFFFFF">BITALPROG</b></span></a>
+          <div class="nav-logo align-self-center">
+                <a class="navbar-brand" href="index.html"><img alt="avatar" src="assets/img/BP1.jpg"> <span class="navbar-brand-name">BITALPROG</span></a>
             </div>
 
             <ul class="navbar-item flex-row mr-auto">
